--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
     <nav>
         <a href="#">Home</a>
         <a href="#">Noticias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale Conosco</a>
+        <a href="#">Contato</a>
     </nav>
     <main>
         <article>
             <h1>
-                História do Mascote do Android
+                História do Mascote do Androidf
             </h1>
 
             <p>
